--- a/templates/system/structure/structure.html
+++ b/templates/system/structure/structure.html
@@ -58,6 +58,13 @@
 <script src="{% static 'js/plugins/layer/layer.js' %}"></script>
 
 <script type="text/javascript">
+    $(function () {
+        $('#SYSTEM-BASIC').addClass('active');
+        $('#SYSTEM-BASIC-STRUCTURE').addClass('active');
+
+    });
+</script>
+<script type="text/javascript">
     var oDataTable = null;
     $(function () {
         oDataTable = initTable();
