--- a/templates/system/menu_update.html
+++ b/templates/system/menu_update.html
@@ -18,9 +18,9 @@
                         <div class="col-sm-3">
                             <input class="form-control" name="name" type="text" value="{{ menu.name }}"/>
                         </div>
-                        <label class="col-sm-2 control-label">代码</label>
+                        <label class="col-sm-2 control-label">编号</label>
                         <div class="col-sm-3">
-                            <input class="form-control" name="code" type="text" value="{{ menu.code }}"/>
+                            <input class="form-control" name="number" type="text" value="{{ menu.number }}"/>
                         </div>
                     </div>
                     <div class="form-group has-feedback">
@@ -32,6 +32,7 @@
                         <div class="col-sm-3">
                             <select class="form-control select2" name="parent">
                                 <option value="{{ menu.parent.id }}">{{ menu.parent.name }}</option>
+                                <option value=""> </option>
                                 {% for parent_menu in menu_all %}
                                     <option value={{ parent_menu.id }}> {{ parent_menu.name }} </option>
                                 {% endfor %}
@@ -42,6 +43,12 @@
                         <label class="col-sm-2 control-label">URL</label>
                         <div class="col-sm-8">
                             <input class="form-control" name="url" type="text" value="{{ menu.url | default:'' }}"/>
+                        </div>
+                    </div>
+                    <div class="form-group has-feedback">
+                        <label class="col-sm-2 control-label">代码</label>
+                        <div class="col-sm-8">
+                            <input class="form-control" name="code" type="text" value="{{ menu.code | default:'' }}"/>
                         </div>
                     </div>
                 </fieldset>
