--- a/templates/system/system_index.html
+++ b/templates/system/system_index.html
@@ -4,14 +4,87 @@
 
 {% block content %}
 
+    <div class="pad margin no-print">
+        <div class="callout callout-info" style="margin-bottom: 0!important;">
+            <h4><i class="fa  fa-info-circle"></i>系统管理:</h4>
+            系统管理模块包含：系统权限管理和系统设置，系统权限管理可实现基于角色组的权限管理，可根据角色组权限动态生成URL导航菜单。
+        </div>
+    </div>
     <!-- Main content -->
-  <section class="content">
-    系统管理首页：system_index，content是页面定义的主要区域，
-    头部和底部内容以及导航栏都是通过模板继承的，之后的所有
-    功能前端页面都是在content内进行编辑。
-  </section>
+    <section class="invoice">
+        <div class="row">
+            <div class="col-xs-12">
+                <h2 class="page-header">
+                    <i class="fa fa-github"></i> RBAC权限管理历史版本
+                </h2>
+            </div>
+            <!-- /.col -->
+        </div>
+        <div class="row">
 
+            <div class="col-xs-12 table-responsive">
+          <table class="table table-striped">
+            <thead>
+            <tr>
+              <th>编号</th>
+              <th>TAG</th>
+              <th>发布日期</th>
+              <th>TAG地址</th>
+              <th>Commit</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr>
+              <td>1</td>
+              <td>v1.19</td>
+              <td>2018-11-16</td>
+              <td>https://github.com/RobbieHan/sandboxMP/tree/v1.19</td>
+              <td>system config</td>
+            </tr>
+            <tr>
+              <td>2</td>
+              <td>v1.18</td>
+              <td>2018-11-16</td>
+              <td>https://github.com/RobbieHan/sandboxMP/tree/v1.18</td>
+              <td>rbac config</td>
+            </tr>
+            <tr>
+              <td>3</td>
+              <td>v1.17</td>
+              <td>2018-11-14</td>
+              <td>https://github.com/RobbieHan/sandboxMP/tree/v1.17</td>
+              <td>role2menu</td>
+            </tr>
+            <tr>
+              <td>4</td>
+              <td>v1.16</td>
+              <td>2018-11-14</td>
+              <td>https://github.com/RobbieHan/sandboxMP/tree/v1.17</td>
+              <td>role2user</td>
+            </tr>
+            </tbody>
+          </table>
+        </div>
+        <!-- /.col -->
+        </div>
+      <!-- /.row -->
+        <div class="row">
+            <!-- accepted payments column -->
+            <div class="col-xs-12">
+              <p class="lead">其他信息：</p>
+
+              <p class="text-muted well well-sm no-shadow" style="margin-top: 10px;">
+                <strong>权限管理开发文档获取地址（知识星球）：</strong> https://t.zsxq.com/a6IqBMr (微信中打开链接)<br>
+                <strong>知识星球快捷入口：</strong>微信公众号搜索[知识星球]，关注后发送52824366，获取星球连接。<br>
+                <strong>知乎专栏SandBox：</strong>https://zhuanlan.zhihu.com/sandbox <br>
+                <strong>轻量级办公管理系统项目开源地址：</strong>https://github.com/RobbieHan/gistandard <br>
+              </p>
+            </div>
+            <!-- /.col -->
+        </div>
+    </section>
     <!-- /.content -->
+    <div class="clearfix"></div>
 
 {% endblock %}
 
