--- a/templates/cmdb/code_update.html
+++ b/templates/cmdb/code_update.html
@@ -40,7 +40,7 @@
                         </div>
                         <label class="col-sm-2 control-label">描述信息</label>
                         <div class="col-sm-3">
-                            <input class="form-control" id="desc" name="desc" type="text" />
+                            <input class="form-control" id="desc" name="desc" type="text" value="{{ code.desc }}"/>
                         </div>
                     </div>
 
